--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,7 @@ flutter_launcher_icons:
   android: "launcher_icon"
   ios: true
   image_path: "assets/icon/logo.png"
+  remove_alpha_ios: true
   min_sdk_android: 21
 
 flutter:
