--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,11 +20,10 @@ dev_dependencies:
   flutter_launcher_icons: ^0.13.1
 
 flutter_launcher_icons:
-  android: "launcher_icon"
+  android: true
   ios: true
   image_path: "assets/icon/logo.png"
   remove_alpha_ios: true
-  min_sdk_android: 21
 
 flutter:
   uses-material-design: true 
