--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,19 +11,23 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_dotenv: ^6.0.0
-  flutter_hooks: ^0.20.5
+  flutter_hooks: ^0.21.3+1
   flutter_secure_storage: ^9.2.2
   flutter_riverpod: ^2.5.1
   go_router: ^14.2.7
   jwt_decoder: ^2.0.1
   hooks_riverpod: ^2.5.1
   http: ^1.5.0
+  graphql_flutter: ^5.2.1
+  graphql: ^5.2.3
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^5.0.0
   flutter_launcher_icons: ^0.13.1
+  graphql_codegen: ^3.0.0
+  build_runner: ^2.10.4
 
 flutter:
   uses-material-design: true
