--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,7 @@ dependencies:
   http: ^1.5.0
   graphql_flutter: ^5.2.1
   graphql: ^5.2.3
+  image_picker: ^1.1.2
 
 dev_dependencies:
   flutter_test:
