--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: sociocube
 description: "Discover and connect with UGC creators, explore influencer marketing campaigns, and earn as a content creator."
-publish_to: 'none'
+publish_to: "none"
 version: 0.1.0
 
 environment:
@@ -22,6 +22,7 @@ dependencies:
   graphql: ^5.2.3
   image_picker: ^1.1.2
   intl: ^0.19.0
+  url_launcher: ^6.3.2
 
 dev_dependencies:
   flutter_test:
@@ -33,7 +34,7 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
-  
+
   assets:
     - .env
     - assets/logo/
