--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,7 @@ dependencies:
   image_picker: ^1.1.2
   intl: ^0.19.0
   url_launcher: ^6.3.2
+  share_plus: ^10.0.2
 
 dev_dependencies:
   flutter_test:
